SCKAN-203 feat: Add sentence options endpoint
